force-app/main/default/objects/Campaign_Schedule__c/Campaign_Schedule__c.object-meta.xml
<CustomObject>
    <label>Campaign Schedule</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Campaign Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>