force-app/main/default/objects/Campaign_Schedule__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>