force-app/main/default/objects/Campaign_Schedule__c/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <label>Landing Page URL</label>
    <type>Url</type>
</CustomField>